--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <img src="img/cafe-essenza.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Café Essenza</h5>
-                                <p class="card-text"> Desenvolvido com HTML, CSS e Bootstrap, nosso objetivo foi criar
+                                <p class="card-text"> Desenvolvido com HTML, CSS e Bootstrap, meu objetivo foi criar
                                     um site envolvente e visualmente cativante, explorando as possibilidades do parallax
                                     para proporcionar uma experiência única aos visitantes.</p>
                                 <div class="d-flex justify-content-between align-items-center">
@@ -203,7 +203,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
-                            <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto">
+                            <img src="img/studio-464.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Studio 464</h5>
                                 <p class="card-text">Este projeto é um salão de beleza desenvolvido usando HTML, CSS e
@@ -222,47 +222,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
-                            <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto">
-                            <div class="card-body">
-                                <h5 class="card-title">Projeto Spotify</h5>
-                                <p class="card-text">Este projeto consiste em uma reprodução da página inicial do
-                                    Spotify. Utilizei HTML, CSS e Bootstrap para desenvolver a interface, buscando
-                                    replicar a aparência e funcionalidades do site original.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="https://victor-louback.github.io/projeto-inicial-spotify/index.html"
-                                            target="_blank"
-                                            class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
-                                        <a href="https://github.com/Victor-Louback/projeto-inicial-spotify"
-                                            target="_blank"
-                                            class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm projetos">
-                            <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto">
-                            <div class="card-body">
-                                <h5 class="card-title">Relogio Digital</h5>
-                                <p class="card-text">Neste projeto, desenvolvi um relógio digital utilizando HTML, CSS e
-                                    JavaScript. O objetivo era criar uma interface simples e intuitiva para exibir o
-                                    horário atual de forma precisa e atualizada.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="https://victor-louback.github.io/Relogio-digital/" target="_blank"
-                                            class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
-                                        <a href="https://github.com/Victor-Louback/Relogio-digital" target="_blank"
-                                            class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm projetos">
-                            <img src="img/projeto-6.png" class="card-img-top" alt="Imagem do projeto">
+                            <img src="img/orçamento-pessoal.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Orçamento Pessoal</h5>
                                 <p class="card-text">Neste projeto, utilizei HTML, Bootstrap e JavaScript para criar
@@ -284,15 +244,19 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
-                            <img src="img/projeto-4.png" class="card-img-top" alt="Imagem do projeto">
+                            <img src="img/spotify.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
-                                <h5 class="card-title">Hotel Paraiso</h5>
-                                <p class="card-text">Neste projeto, desenvolvi um site para um hotel utilizando HTML e
-                                    CSS. O objetivo foi criar uma plataforma online que transmitisse a essência e o
-                                    ambiente acolhedor do hotel aos visitantes.</p>
+                                <h5 class="card-title">Projeto Spotify</h5>
+                                <p class="card-text">Este projeto consiste em uma reprodução da página inicial do
+                                    Spotify. Utilizei HTML, CSS e Bootstrap para desenvolver a interface, buscando
+                                    replicar a aparência e funcionalidades do site original.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://github.com/Victor-Louback/Hotel-Paraiso" target="_blank"
+                                        <a href="https://victor-louback.github.io/projeto-inicial-spotify/index.html"
+                                            target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
+                                        <a href="https://github.com/Victor-Louback/projeto-inicial-spotify"
+                                            target="_blank"
                                             class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
                                     </div>
                                 </div>
@@ -301,7 +265,43 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
-                            <img src="img/projeto-5.png" height="180px" class="card-img-top" alt="Imagem do projeto">
+                            <img src="img/relogio.png" class="card-img-top" alt="Imagem do projeto">
+                            <div class="card-body">
+                                <h5 class="card-title">Relogio Digital</h5>
+                                <p class="card-text">Neste projeto, desenvolvi um relógio digital utilizando HTML, CSS e
+                                    JavaScript. O objetivo era criar uma interface simples e intuitiva para exibir o
+                                    horário atual de forma precisa e atualizada.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://victor-louback.github.io/Relogio-digital/" target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
+                                        <a href="https://github.com/Victor-Louback/Relogio-digital" target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm projetos">
+                            <img src="img/restaurante-essenza.png" class="card-img-top" alt="Imagem do projeto">
+                            <div class="card-body">
+                                <h5 class="card-title">Restaurante Essenza</h5>
+                                <p class="card-text">Desenvolvi o site do restaurante Essezan com HTML, CSS e Bootstrap com o objetivo de oferecer uma experiência envolvente e visualmente cativante. Com atenção meticulosa aos detalhes e um design moderno centrado no usuário, o site atrai clientes em potencial desde o primeiro clique.</p>
+
+                                <div class="btn-group">
+                                    <a href="https://victor-louback.github.io/Restaurante-Essenza/" target="_blank"
+                                        class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
+                                    <a href="https://github.com/Victor-Louback/Restaurante-Essenza" target="_blank"
+                                        class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm projetos">
+                            <img src="img/projeto.png" height="180px" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Proximo Projeto</h5>
                                 <p class="card-text">sendo construído</p>
