--- a/index.html
+++ b/index.html
@@ -265,6 +265,25 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
+                            <img src="img/formulario.png" class="card-img-top" alt="Imagem do projeto">
+                            <div class="card-body">
+                                <h5 class="card-title">Formulário</h5>
+                                <p class="card-text">Neste projeto, criei uma página de formulário interativa e visualmente atraente, utilizando uma combinação de HTML, CSS, Bootstrap e JavaScript.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://victor-louback.github.io/Formulario/"
+                                            target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
+                                        <a href="https://github.com/Victor-Louback/Formulario"
+                                            target="_blank"
+                                            class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm projetos">
                             <img src="img/relogio.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Relogio Digital</h5>
