--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         progredindo passo a passo e aplicando os conceitos aprendidos em projetos práticos.</p>
                     <p>Além disso, estou dedicando tempo para estudar e aprimorar meu conhecimento em outras áreas
                         relacionadas ao desenvolvimento web. Estou focado em expandir meu domínio de JavaScript,
-                        aprofundar meu conhecimento em HTML e CSS, e explorar frameworks populares como React e Vue.js.
+                        aprofundar meu conhecimento em HTML e CSS, e explorar frameworks populares como React e node.js.
                     </p>
                     <p>Para complementar meu crescimento profissional, também estou investindo no estudo da língua
                         inglesa. Reconheço a importância do inglês no cenário global de tecnologia e estou empenhado em
