add projeto One Bit Code

--- a/index.html
+++ b/index.html
@@ -320,6 +320,23 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm projetos">
+                            <img src="img/one-bit-code.png" class="card-img-top" alt="Imagem do projeto">
+                            <div class="card-body">
+                                <h5 class="card-title">Projeto One Bit Code</h5>
+                                <p class="card-text">Este projeto aonde usamos somente HTML e CSS, esta sendo focado principalmente na aparência do site, foi desenvolvido com inspiração da One Bit Code, onde foi criar um design cativante e visualmente atraente.</p>
+
+                                <div class="btn-group">
+                                    <a href="https://victor-louback.github.io/Projeto-OneBitCode/" target="_blank"
+                                        class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
+                                    <a href="https://github.com/Victor-Louback/Projeto-OneBitCode" target="_blank"
+                                        class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm projetos">
                             <img src="img/projeto.png" height="180px" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Proximo Projeto</h5>
