--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
                             <img src="img/formulario.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Formulário</h5>
-                                <p class="card-text">Neste projeto, criei uma página de formulário interativa e visualmente atraente, utilizando uma combinação de HTML, CSS, Bootstrap e JavaScript.</p>
+                                <p class="card-text">Neste projeto, criei uma página de formulário interativa e
+                                    visualmente atraente, utilizando uma combinação de HTML, CSS, Bootstrap e
+                                    JavaScript.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://victor-louback.github.io/Formulario/"
-                                            target="_blank"
+                                        <a href="https://victor-louback.github.io/Formulario/" target="_blank"
                                             class="btn btn-sm btn-outline-secondary btn-custom">Visualizar</a>
-                                        <a href="https://github.com/Victor-Louback/Formulario"
-                                            target="_blank"
+                                        <a href="https://github.com/Victor-Louback/Formulario" target="_blank"
                                             class="btn btn-sm btn-outline-secondary btn-custom">Projeto</a>
                                     </div>
                                 </div>
@@ -306,7 +306,10 @@
                             <img src="img/restaurante-essenza.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Restaurante Essenza</h5>
-                                <p class="card-text">Desenvolvi o site do restaurante Essezan com HTML, CSS e Bootstrap com o objetivo de oferecer uma experiência envolvente e visualmente cativante. Com atenção meticulosa aos detalhes e um design moderno centrado no usuário, o site atrai clientes em potencial desde o primeiro clique.</p>
+                                <p class="card-text">Desenvolvi o site do restaurante Essezan com HTML, CSS e Bootstrap
+                                    com o objetivo de oferecer uma experiência envolvente e visualmente cativante. Com
+                                    atenção meticulosa aos detalhes e um design moderno centrado no usuário, o site
+                                    atrai clientes em potencial desde o primeiro clique.</p>
 
                                 <div class="btn-group">
                                     <a href="https://victor-louback.github.io/Restaurante-Essenza/" target="_blank"
@@ -323,7 +326,9 @@
                             <img src="img/one-bit-code.png" class="card-img-top" alt="Imagem do projeto">
                             <div class="card-body">
                                 <h5 class="card-title">Projeto One Bit Code</h5>
-                                <p class="card-text">Este projeto aonde usamos somente HTML e CSS, esta sendo focado principalmente na aparência do site, foi desenvolvido com inspiração da One Bit Code, onde foi criar um design cativante e visualmente atraente.</p>
+                                <p class="card-text">Este projeto aonde usamos somente HTML e CSS, esta sendo focado
+                                    principalmente na aparência do site, foi desenvolvido com inspiração da One Bit
+                                    Code, onde foi criar um design cativante e visualmente atraente.</p>
 
                                 <div class="btn-group">
                                     <a href="https://victor-louback.github.io/Projeto-OneBitCode/" target="_blank"
