--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
                     <p>Estou me aprimorando por meio de recursos educacionais, como o curso 'Desenvolvimento Web
                         Completo - 20 cursos + 20 projetos' na Udemy.com. Através desse curso abrangente, estou
                         progredindo passo a passo e aplicando os conceitos aprendidos em projetos práticos.</p>
-                    <p>Além disso, estou dedicando tempo para estudar e aprimorar meu conhecimento em outras áreas
-                        relacionadas ao desenvolvimento web. Estou focado em expandir meu domínio de JavaScript,
-                        aprofundar meu conhecimento em HTML e CSS, e explorar frameworks populares como React e node.js.
-                    </p>
+                    <p>Além disso, atualmente, estou dedicando meu tempo para estudar e aprimorar meu conhecimento em
+                        outras áreas
+                        relacionadas ao desenvolvimento web. Estou focado em expandir meu domínio em PHP e MySQL,
+                        aprofundando meu conhecimento nessas tecnologias fundamentais. Também estou explorando maneiras
+                        de aplicar essas habilidades em projetos práticos e desafiadores.</p>
                     <p>Para complementar meu crescimento profissional, também estou investindo no estudo da língua
                         inglesa. Reconheço a importância do inglês no cenário global de tecnologia e estou empenhado em
                         aprimorar minhas habilidades de comunicação e compreensão da língua.</p>
